Adjustments to code on collections