@@ -3,7 +3,7 @@ package it.unibo.polymorphism.last;
 /* Showing ClassCastException */
 public class ShowCCE {
 	public static void main(String[] as) {
-		Object o = new Integer(10);
+		Object o = Integer.valueOf(10);
 		Integer i = (Integer) o; // OK
 		String s = (String) o; // ClassCastException
 		// int i = o.intValue(); // No, intValue() non def.
